[package]
name = "git-pr"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
colored = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
textwrap = "0.16"
tabled = { version = "0.20.0", features = ["ansi"] }
owo-colors = "4.2.2"